writerfilter/source/dmapper/DomainMapper_Impl.cxx
@@ -3941,7 +3941,7 @@ void DomainMapper_Impl::PopFootOrEndnote()
     }
     m_aRedlines.pop();
     m_eSkipFootnoteState = SkipFootnoteSeparator::OFF;
-    m_bInFootOrEndnote = false;
+    m_bInFootOrEndnote = m_bInFootnote = false;
     m_pFootnoteContext = nullptr;
     m_bFirstParagraphInCell = m_bSaveFirstParagraphInCell;
 }
